force-app/main/default/objects/Slack_Alert_Configuration__mdt/Slack_Alert_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for slack alerts</description>
    <label>Slack Alert Configuration</label>
    <pluralLabel>Slack Alert Configurations</pluralLabel>
</CustomObject>