force-app/main/default/objects/Slack_Alert_Configuration__mdt/fields/Create_Alert_Template__c.field-meta.xml
<CustomField>
    <fullName>Create_Alert_Template__c</fullName>
    <inlineHelpText>Text template used when creating alert for new record alert, use this in string to replace value {field} = Field Name , {value} = field value</inlineHelpText>
    <label>Create Alert Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>