force-app/main/default/objects/Slack_Alert_Configuration__mdt/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <inlineHelpText>Enter all field API names, comma-separated values</inlineHelpText>
    <label>Field Name</label>
    <length>130768</length>
    <type>LongTextArea</type>
</CustomField>