force-app/main/default/objects/Slack_Alert_Configuration__mdt/fields/Message_Header__c.field-meta.xml
<CustomField>
    <fullName>Message_Header__c</fullName>
    <inlineHelpText>The first line of alert on your sack message</inlineHelpText>
    <label>Message Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>