force-app/main/default/objects/Slack_Alert_Configuration__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <inlineHelpText>Provide Object API Name</inlineHelpText>
    <label>Object Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>