force-app/main/default/objects/Slack_Alert_Configuration__mdt/fields/RecordType_Id__c.field-meta.xml
<CustomField>
    <fullName>RecordType_Id__c</fullName>
    <inlineHelpText>Filter record by record type id, (alerts of on this record type will be sent if any)</inlineHelpText>
    <label>RecordType Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>