force-app/main/default/objects/Slack_Alert_Configuration__mdt/fields/Slack_Destination_Id__c.field-meta.xml
<CustomField>
    <fullName>Slack_Destination_Id__c</fullName>
    <inlineHelpText>MESSAGE DESTINATION ID of slack channel that is configured in slack Automation Configuration</inlineHelpText>
    <label>Slack Destination Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>