force-app/main/default/objects/Slack_Alert_Configuration__mdt/fields/Track_Insert__c.field-meta.xml
<CustomField>
    <fullName>Track_Insert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Track Insert</label>
    <type>Checkbox</type>
</CustomField>