force-app/main/default/objects/Slack_Alert_Configuration__mdt/fields/Track_Update__c.field-meta.xml
<CustomField>
    <fullName>Track_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Track Update</label>
    <type>Checkbox</type>
</CustomField>