force-app/main/default/objects/Slack_Alert_Configuration__mdt/fields/Update_Alert_Template__c.field-meta.xml
<CustomField>
    <fullName>Update_Alert_Template__c</fullName>
    <inlineHelpText>Text template used when creating alert for update record alert, use this in string to replace value {field} = Field Name , {value} = field value , {old} = old field value</inlineHelpText>
    <label>Update Alert Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>