force-app/main/default/objects/Slack_Alert_Configuration__mdt/fields/Update_Message_Header__c.field-meta.xml
<CustomField>
    <fullName>Update_Message_Header__c</fullName>
    <inlineHelpText>To add value from field use template , {{!&lt;fieldapi name&gt;}}</inlineHelpText>
    <label>Update Message Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>